# GENETIS-python

./: .gitignore  README.md  ara_loop.py  ara_loop.sh  config.yml  environment.yaml  environment.yml  pyproject.toml  settings.yaml
.github/workflows/: ci.yml  lint.yml
src/: ara_loop.py
src/ara/: ara_job.sh  ara_paralleljob.sh  arasim_tools.py  setup_dummy_hpol.txt  setup_dummy_vpol.txt
src/ara/antenna_files/hpol/: 200_mhz_gain.csv  300_mhz_gain.csv  400_mhz_gain.csv  500_mhz_gain.csv  600_mhz_gain.csv  700_mhz_gain.csv  ara_hpol_300.csv
src/ara/antenna_files/vpol/: ara_bicone6in_1.csv  ara_bicone6in_10.csv  ara_bicone6in_11.csv  ara_bicone6in_12.csv  ara_bicone6in_13.csv  ara_bicone6in_14.csv  ara_bicone6in_15.csv  ara_bicone6in_16.csv  ara_bicone6in_17.csv  ara_bicone6in_18.csv  ara_bicone6in_19.csv  ara_bicone6in_2.csv  ara_bicone6in_20.csv  ara_bicone6in_21.csv  ara_bicone6in_22.csv  ara_bicone6in_23.csv  ara_bicone6in_24.csv  ara_bicone6in_25.csv  ara_bicone6in_26.csv  ara_bicone6in_27.csv  ara_bicone6in_28.csv  ara_bicone6in_29.csv  ara_bicone6in_3.csv  ara_bicone6in_30.csv  (+37 more)
src/xf/: build_vpol.js  create_al.js  create_ant_sim_data.js  create_grid_vpol.js  header_hpol.js  header_vpol.js  hpol_feed.js  make_image.js  output_skele.js  queue_sim.js  vpol_feed.js  xf_gpu.sh  xfdtd_tools.py
src/xf/hpol_scripts/: build_hpol.js  create_ferrite.js  create_grid_hpol.js  header_hpol.js
src/xf/shared_scripts/: create_pec.js  xf_gpu.sh
utils/: ._pop_analysis.py  config.py  initialize.py  lint.sh  pop_analysis.py  run_ga.py  save_state_utils.py  settings.py
